assets/css/style.css
/* overall properties selector */
:root {
  --light-font-shade: rgb(105, 105, 105);
  --blue-light: rgb(180, 224, 232);
  --background: black;
}
* {
  background-color: fff;
  /* background-image: linear-gradient(to bottom right, #168f28, #54e49a); */
  color: black;
  font-family: "Quicksand", sans-serif;
}
body {
  box-sizing: border-box;
  font-family: Muli, sans-serif;
  text-decoration: none;
}
/* styling the links */
a {
  cursor: pointer;
  color: black;
  text-decoration: none;
}

header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 100px;

  padding: 50px;
}
nav ul {
  list-style-type: none;
  display: flex;
  font-size: 25px;
}
/* make the list postion to be realtive such that <a> tag can be make position abolute for animations */
nav ul li {
  display: block;
  height: 100%;
  padding: 0 15px;
  position: relative;
  text-transform: uppercase;
}

/* adding hover effect on nav elements */
/*On hover each nav element to have a line across it */
/*add the line starting and ending in each <a> tag inside the <ul> list */
nav ul li a::after {
  content: "";
  position: absolute;
  left: 0px;
  bottom: -5px;
  width: 100%;
  height: 3px;
  background-color: var(--blue-light);
  transform-origin: bottom right;
  transition: transform 0.5s ease;
  transform: scaleX(0);
}
ul a:hover::after {
  transform-origin: bottom left;
  transform: scaleX(1);
}

/*positon the logo to be displayed as desired */
/*adding box shadow to make the logo in 3d view */
.logo {
  object-fit: contain;
  width: 100px;
  border-radius: 3333px;
  box-shadow: 0 5px 10px var(--light-font-shade);
  display: inline-block;
}

/*display content of main element with flex box */
.content {
  display: flex;
  justify-content: space-around;
  align-items: center;
  height: 100vh;
  padding: 20px;
  margin: 25px auto;
  animation: 0.6s ease-in-out 0.3s 1 normal forwards running;
}
.about {
  flex: 0 0 auto;
  font-weight: 700;
  font-size: 4vw;
  line-height: 129.69%;
  letter-spacing: 0.03em;
  margin-bottom: 0px;
  margin-left: 0px;
}

.side {
  flex: 0 0 auto;
}

/*styling inside the about section*/
.job {
  color: var(--blue-light);
}

/*styling inside the side section*/
.picture-image {
  width: 250px;
  height: 250px;
  border-radius: 5555px;
  box-shadow: 5px 10px var(--light-font-shade);
}

/*styling projects section */
/*heding of the project section */
/*heading of contact section*/
.projects,
.contact-info {
  display: block;
  height: 100vh;
}
.project-heading,
.contact-header {
  text-align: center;
}
.project-heading > h2 {
  font-size: 40px;
  transform: scale(1);
}
.contact-header > h2 {
  font-size: 40px;
  transform: scale(1);
}
.project-heading-desp,
.contact-heading-desp {
  margin: 50px 0px;
  color: var(--blue-light);
  width: 100%;
  font-style: normal;
  font-weight: normal;
  font-size: 26px;
  line-height: 184.69%;
  letter-spacing: 0.03em;
}

/*section inside the project page containg all the needed boxes */
.project-subcontainer {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  padding: 10px;
}

.project-box {
  width: 100%;
  height: 300px;
  border-radius: 4px;
  transition-duration: 0.3s;
  border: 2px solid var(--blue-light);
  border-radius: 5px;
}
.project-image {
  background: linear-gradient(rgba(187, 128, 128, 0.5), rgb(180, 224, 232, 0.5)),
    url(/assets/images/etch-a-sketch.png);
  background-size: cover;
  background-position: 50% 50%;
  background-color: bisque;
}
.project-desp {
  text-align: center;
  margin: 10px 0px 20px;
  color: var(--light-font-shade);
  width: 100%;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 184.69%;
  letter-spacing: 0.03em;
  max-width: unset;
}

/*project place holder divs */
.project-image-soon {
  background: linear-gradient(rgba(187, 128, 128, 0.5), rgb(180, 224, 232, 0.5)),
    url(/assets/images/comingsoon.png);
  background-size: cover;
  background-position: 50% 50%;
}

.project-box-soon {
  width: 100%;
  height: 50%;
  border-radius: 4px;
  transition-duration: 0.3s;
  border: 2px solid var(--blue-light);
  border-radius: 5px;
}
.project-etch-a-sketch {
  flex: 0 0 40%;
}

.coming-soon {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
  flex: 0 0 60%;
}

/* hover effect set up on the div */
.project-box:hover {
  width: 100%;
  height: 310px;
  box-shadow: 5px 10px var(--light-font-shade);
  background: url(/assets/images/etch-a-sketch.png);
  background-size: cover;
  background-position: 50% 50%;
}
.project-box-soon:hover {
  width: 100%;
  height: 55%;
  box-shadow: 5px 10px var(--light-font-shade);
  background: url(/assets/images/comingsoon.png);
  background-size: cover;
  background-position: 50% 50%;
}

/*contact section */
.contact {
  cursor: pointer;
  color: black;
  text-decoration: none;
  transition-duration: 100ms;
  border-radius: 290486px;
  box-shadow: 0 5px 10px var(--light-font-shade);
  display: inline-block;
  font-size: 20px;
  line-height: 1;
  padding: 20px 25px;
}
.contact:hover {
  box-shadow: 0 15px 25px var(--light-font-shade);
}

